@@ -1,3 +1,8 @@
+2012-04-11  Jason Merrill  <jason@redhat.com>
+
+	PR c++/52906
+	* g++.dg/ext/attrib45.C: New.
+
 2012-04-13  Tom de Vries  <tom@codesourcery.com>
 
 	Backport from mainline r186419.
